--- a/JVOS/SystemWindowFrame.axaml
+++ b/JVOS/SystemWindowFrame.axaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:appapi="clr-namespace:JVOS.ApplicationAPI.Windows;assembly=JVOS.ApplicationAPI"
              xmlns:ic="clr-namespace:JVOS.Controls;assembly=JVOS"
+             xmlns:api="using:JVOS.ApplicationAPI"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="JVOS.SystemWindowFrame" ClipToBounds="False">
 	<Grid x:Name="baseGrid">
@@ -24,6 +25,8 @@
 						<Rectangle RadiusX="8" RadiusY="8" Width="16" Height="16" Fill="Yellow" x:Name="MinimizeButtonRect"/>
 						<Rectangle Width="4"/>
 						<Rectangle RadiusX="8" RadiusY="8" Width="16" Height="16" Fill="Green" x:Name="RestoreButtonRect"/>
+						<Rectangle Width="4"/>
+						<Rectangle RadiusX="8" RadiusY="8" Width="16" Height="16" Fill="GreenYellow" Cursor="Hand" x:Name="GodotButtonRect" IsVisible="{x:Static api:JVOSRuntimeInformation.IsGodot}"/>
 						<Rectangle Width="4"/>
 					</StackPanel>
 				</Border>
